deploy: eb1a2b801bf14bfe23740e7c9ead0147caabbc57

--- a/genindex.html
+++ b/genindex.html
@@ -297,6 +297,8 @@
 </li>
       <li><a href="c_mathematics/calculus/Vector_calculus.html#index-8">Divergence of a vector field</a>
 </li>
+      <li><a href="b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html#index-0">Divide and Conquer</a>
+</li>
       <li><a href="c_mathematics/sets_and_functions/3_functions.html#index-0">Domain</a>
 </li>
   </ul></td>
@@ -591,7 +593,7 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="b_coding/Fundamentals of Computer Science/3_Recursion.html#index-0">Recursion</a>
+      <li><a href="b_coding/Fundamentals of Computer Science/2_Recursion.html#index-0">Recursion</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/3_functions.html#index-3">Restriction (functions)</a>
 </li>
