deploy: 9716be3829085d639e9585bda3a0143c70e9eeb7

--- a/genindex.html
+++ b/genindex.html
@@ -569,6 +569,8 @@
 </li>
       <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-3">Plots: 3D</a>
 </li>
+      <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-4">Plots: Animation</a>
+</li>
       <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-1">Plots: histogram</a>
 </li>
       <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-2">Plots: image</a>
