--- a/genindex.html
+++ b/genindex.html
@@ -569,7 +569,7 @@
 </li>
       <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-3">Plots: 3D</a>
 </li>
-      <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-4">Plots: Animation</a>
+      <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-4">Plots: Animations</a>
 </li>
       <li><a href="b_coding/Intro to Python/17_Matplotlib.html#index-1">Plots: histogram</a>
 </li>
