--- a/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html
+++ b/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html
@@ -37,7 +37,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Intro to Python" href="../Intro to Python/intro.html" />
+    <link rel="next" title="Greedy Algorithms" href="4_Greedy_Algorithms.html" />
     <link rel="prev" title="Recursion" href="2_Recursion.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,6 +96,9 @@
       </li>
       <li class="active">
         <a href="">Divide and Conquer</a>
+      </li>
+      <li class="">
+        <a href="4_Greedy_Algorithms.html">Greedy Algorithms</a>
       </li>
     </ul>
     </li>
@@ -596,7 +599,7 @@ Time complexity can be expressed as:</p>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="2_Recursion.html" title="previous page">Recursion</a>
-    <a class='right-next' id="next-link" href="../Intro to Python/intro.html" title="next page">Intro to Python</a>
+    <a class='right-next' id="next-link" href="4_Greedy_Algorithms.html" title="next page">Greedy Algorithms</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
