--- a/b_coding/Intro to Python/intro.html
+++ b/b_coding/Intro to Python/intro.html
@@ -38,7 +38,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Printing and formatting statements" href="1_Printing_and_formatting_statements.html" />
-    <link rel="prev" title="Divide and Conquer" href="../Fundamentals of Computer Science/3_Divide_and_Conquer.html" />
+    <link rel="prev" title="Greedy Algorithms" href="../Fundamentals of Computer Science/4_Greedy_Algorithms.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -375,7 +375,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Fundamentals of Computer Science/3_Divide_and_Conquer.html" title="previous page">Divide and Conquer</a>
+    <a class='left-prev' id="prev-link" href="../Fundamentals of Computer Science/4_Greedy_Algorithms.html" title="previous page">Greedy Algorithms</a>
     <a class='right-next' id="next-link" href="1_Printing_and_formatting_statements.html" title="next page">Printing and formatting statements</a>
 
     </div>
