--- a/genindex.html
+++ b/genindex.html
@@ -373,6 +373,8 @@
 </li>
       <li><a href="d_geosciences/Keplerian_Orbits.html#index-2">Gravity force</a>
 </li>
+      <li><a href="b_coding/Fundamentals of Computer Science/4_Greedy_Algorithms.html#index-0">Greedy Algorithms</a>
+</li>
       <li><a href="c_mathematics/sets_and_functions/2_sets.html#index-1">Group</a>
 </li>
   </ul></td>
