--- a/b_coding/Fundamentals of Computer Science/2_Recursion.html
+++ b/b_coding/Fundamentals of Computer Science/2_Recursion.html
@@ -97,6 +97,9 @@
       <li class="">
         <a href="3_Divide_and_Conquer.html">Divide and Conquer</a>
       </li>
+      <li class="">
+        <a href="4_Greedy_Algorithms.html">Greedy Algorithms</a>
+      </li>
     </ul>
     </li>
     <li class="">
