--- a/genindex.html
+++ b/genindex.html
@@ -291,15 +291,17 @@
 </li>
       <li><a href="c_mathematics/series_and_sequences/Fourier_transforms.html#index-1">Delta function</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="b_coding/Intro to Python/14_Dictionaries.html#index-0">Dictionaries (python)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/calculus/Vector_calculus.html#index-8">Divergence of a vector field</a>
 </li>
       <li><a href="b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html#index-0">Divide and Conquer</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/3_functions.html#index-0">Domain</a>
+</li>
+      <li><a href="b_coding/Fundamentals of Computer Science/4_Dynamic_Programming.html#index-0">Dynamic Programming</a>
 </li>
   </ul></td>
 </tr></table>
@@ -373,7 +375,7 @@
 </li>
       <li><a href="d_geosciences/Keplerian_Orbits.html#index-2">Gravity force</a>
 </li>
-      <li><a href="b_coding/Fundamentals of Computer Science/4_Greedy_Algorithms.html#index-0">Greedy Algorithms</a>
+      <li><a href="b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.html#index-0">Greedy Algorithms</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/2_sets.html#index-1">Group</a>
 </li>
