--- a/b_coding/Fundamentals of Computer Science/2_Recursion.html
+++ b/b_coding/Fundamentals of Computer Science/2_Recursion.html
@@ -98,7 +98,10 @@
         <a href="3_Divide_and_Conquer.html">Divide and Conquer</a>
       </li>
       <li class="">
-        <a href="4_Greedy_Algorithms.html">Greedy Algorithms</a>
+        <a href="4_Dynamic_Programming.html">Dynamic Programming</a>
+      </li>
+      <li class="">
+        <a href="5_Greedy_Algorithms.html">Greedy Algorithms</a>
       </li>
     </ul>
     </li>
