--- a/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html
+++ b/b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html
@@ -37,7 +37,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Greedy Algorithms" href="4_Greedy_Algorithms.html" />
+    <link rel="next" title="Dynamic Programming" href="4_Dynamic_Programming.html" />
     <link rel="prev" title="Recursion" href="2_Recursion.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -98,7 +98,10 @@
         <a href="">Divide and Conquer</a>
       </li>
       <li class="">
-        <a href="4_Greedy_Algorithms.html">Greedy Algorithms</a>
+        <a href="4_Dynamic_Programming.html">Dynamic Programming</a>
+      </li>
+      <li class="">
+        <a href="5_Greedy_Algorithms.html">Greedy Algorithms</a>
       </li>
     </ul>
     </li>
@@ -599,7 +602,7 @@ Time complexity can be expressed as:</p>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="2_Recursion.html" title="previous page">Recursion</a>
-    <a class='right-next' id="next-link" href="4_Greedy_Algorithms.html" title="next page">Greedy Algorithms</a>
+    <a class='right-next' id="next-link" href="4_Dynamic_Programming.html" title="next page">Dynamic Programming</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
