--- a/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.html
+++ b/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.html
@@ -130,6 +130,9 @@
       <li class="">
         <a href="Lecture7_Pipe_Flow_with_Heat.html">Lecture7_Pipe_Flow_with_Heat</a>
       </li>
+      <li class="">
+        <a href="Lecture8_2D_Energy_Equation.html">Lecture8_2D_Energy_Equation</a>
+      </li>
     </ul>
     </li>
     <li class="">
