deploy: a7f4b92c1582ebc84600c1663ccf91aeb36669e7

--- a/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.html
+++ b/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.html
@@ -131,7 +131,10 @@
         <a href="Lecture7_Pipe_Flow_with_Heat.html">Lecture7_Pipe_Flow_with_Heat</a>
       </li>
       <li class="">
-        <a href="Lecture8_2D_Energy_Equation.html">Lecture8_2D_Energy_Equation</a>
+        <a href="Lecture8_Part1_Navier_Stoke_Equation.html">Lecture8_Part1_Navier_Stoke_Equation</a>
+      </li>
+      <li class="">
+        <a href="Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.html">Lecture8_Part2_SPH_Algorithm_For_Energy_Equation</a>
       </li>
     </ul>
     </li>
