deploy: 9d9a9f1e88fc4b1e487e940089aff6e2d1131429

--- a/b_coding/Intro to Python/10_Importing.html
+++ b/b_coding/Intro to Python/10_Importing.html
@@ -148,6 +148,9 @@
       <li class="">
         <a href="19_Classes.html">Python classes</a>
       </li>
+      <li class="">
+        <a href="20_Lambdas.html">Lambdas</a>
+      </li>
     </ul>
     </li>
     <li class="">
