--- a/b_coding/Intro to Python/19_Classes.html
+++ b/b_coding/Intro to Python/19_Classes.html
@@ -37,7 +37,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Pandas" href="../Pandas/intro.html" />
+    <link rel="next" title="Lambdas" href="20_Lambdas.html" />
     <link rel="prev" title="Assert" href="18_Assert.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -147,6 +147,9 @@
       </li>
       <li class="active">
         <a href="">Python classes</a>
+      </li>
+      <li class="">
+        <a href="20_Lambdas.html">Lambdas</a>
       </li>
     </ul>
     </li>
@@ -594,7 +597,7 @@ woof-woof!
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="18_Assert.html" title="previous page">Assert</a>
-    <a class='right-next' id="next-link" href="../Pandas/intro.html" title="next page">Pandas</a>
+    <a class='right-next' id="next-link" href="20_Lambdas.html" title="next page">Lambdas</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
