--- a/b_coding/Pandas/intro.html
+++ b/b_coding/Pandas/intro.html
@@ -38,7 +38,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="1_basics.html" />
-    <link rel="prev" title="Python classes" href="../Intro to Python/19_Classes.html" />
+    <link rel="prev" title="Lambdas" href="../Intro to Python/20_Lambdas.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -297,7 +297,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Intro to Python/19_Classes.html" title="previous page">Python classes</a>
+    <a class='left-prev' id="prev-link" href="../Intro to Python/20_Lambdas.html" title="previous page">Lambdas</a>
     <a class='right-next' id="next-link" href="1_basics.html" title="next page">Introduction</a>
 
     </div>
