--- a/b_coding/Intro to Python/15_Flow_control_statements.html
+++ b/b_coding/Intro to Python/15_Flow_control_statements.html
@@ -148,6 +148,9 @@
       <li class="">
         <a href="19_Classes.html">Python classes</a>
       </li>
+      <li class="">
+        <a href="20_Lambdas.html">Lambdas</a>
+      </li>
     </ul>
     </li>
     <li class="">
