--- a/genindex.html
+++ b/genindex.html
@@ -455,6 +455,8 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="b_coding/Intro to Python/20_Lambdas.html#index-0">Lambdas</a>
+</li>
       <li><a href="c_mathematics/differential_equations/9_poisson_laplace_eq.html#index-1">Laplace&#39;s equation</a>
 </li>
       <li><a href="c_mathematics/calculus/Vector_calculus.html#index-12">Laplacian for scalar/vector fields</a>
@@ -463,10 +465,10 @@
 </li>
       <li><a href="c_mathematics/statistics/Linear_Regression.html#index-0">Linear regression</a>
 </li>
-      <li><a href="c_mathematics/linear_algebra/1_Basic_definitions_and_operations.html#index-5">Linear transformation</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="c_mathematics/linear_algebra/1_Basic_definitions_and_operations.html#index-5">Linear transformation</a>
+</li>
       <li><a href="b_coding/Intro to Python/7_List_comprehensions.html#index-0">List comprehensions (python)</a>
 </li>
       <li><a href="b_coding/Intro to Python/5_Lists.html#index-0">Lists (python)</a>
