--- a/genindex.html
+++ b/genindex.html
@@ -287,14 +287,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/differential_equations/12_wave_eq.html#index-1">D&#39;Alembert&#39;s formula</a>
 </li>
+      <li><a href="b_coding/Fundamentals of Computer Science/6_Data_Structures.html#index-0">Data Structures</a>
+</li>
       <li><a href="c_mathematics/complex_analysis/2_complex_plane.html#index-2">De Moivre&#39;s formula</a>
 </li>
       <li><a href="c_mathematics/series_and_sequences/Fourier_transforms.html#index-1">Delta function</a>
 </li>
-      <li><a href="b_coding/Intro to Python/14_Dictionaries.html#index-0">Dictionaries (python)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="b_coding/Intro to Python/14_Dictionaries.html#index-0">Dictionaries (python)</a>
+</li>
       <li><a href="c_mathematics/calculus/Vector_calculus.html#index-8">Divergence of a vector field</a>
 </li>
       <li><a href="b_coding/Fundamentals of Computer Science/3_Divide_and_Conquer.html#index-0">Divide and Conquer</a>
@@ -365,13 +367,15 @@
 </li>
       <li><a href="c_mathematics/linear_algebra/4_Eigenvalues_and_eigenvectors.html#index-1">Geometric multiplicity</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/series_and_sequences/Fourier_series.html#index-2">Gibbs phenomenon</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/calculus/Vector_calculus.html#index-6">Gradient of a scalar field</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/3_functions.html#index-2">Graph (functions)</a>
+</li>
+      <li><a href="b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.html#index-0">Graph Algorithms</a>
 </li>
       <li><a href="d_geosciences/Keplerian_Orbits.html#index-2">Gravity force</a>
 </li>
