--- a/b_coding/Fundamentals of Computer Science/2_Recursion.html
+++ b/b_coding/Fundamentals of Computer Science/2_Recursion.html
@@ -103,6 +103,12 @@
       <li class="">
         <a href="5_Greedy_Algorithms.html">Greedy Algorithms</a>
       </li>
+      <li class="">
+        <a href="6_Data_Structures.html">Data Structures</a>
+      </li>
+      <li class="">
+        <a href="7_Graph_Algorithms.html">Graph Algorithms</a>
+      </li>
     </ul>
     </li>
     <li class="">
