--- a/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.html
+++ b/b_coding/Fundamentals of Computer Science/5_Greedy_Algorithms.html
@@ -37,7 +37,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Intro to Python" href="../Intro to Python/intro.html" />
+    <link rel="next" title="Data Structures" href="6_Data_Structures.html" />
     <link rel="prev" title="Dynamic Programming" href="4_Dynamic_Programming.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -102,6 +102,12 @@
       </li>
       <li class="active">
         <a href="">Greedy Algorithms</a>
+      </li>
+      <li class="">
+        <a href="6_Data_Structures.html">Data Structures</a>
+      </li>
+      <li class="">
+        <a href="7_Graph_Algorithms.html">Graph Algorithms</a>
       </li>
     </ul>
     </li>
@@ -543,7 +549,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="4_Dynamic_Programming.html" title="previous page">Dynamic Programming</a>
-    <a class='right-next' id="next-link" href="../Intro to Python/intro.html" title="next page">Intro to Python</a>
+    <a class='right-next' id="next-link" href="6_Data_Structures.html" title="next page">Data Structures</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
