deploy: 11be749b47171a0bc9479879ac77460eb70eaccb

--- a/a_modules/seismology/Ghosting.html
+++ b/a_modules/seismology/Ghosting.html
@@ -1511,7 +1511,7 @@ title="Print to PDF"
 <p>Ghosting results in a noisier trace. The interaction of these two signals also leads to regular “notches” in the frequency spectrum, which can limit the bandwidth. The location of these notches <span class="math notranslate nohighlight">\(f_{n}\)</span> is dependant on the depth <span class="math notranslate nohighlight">\(d\)</span> of the source and receivers.</p>
 <div class="math notranslate nohighlight">
 \[f_{n}=\frac{v}{2d}\]</div>
-<p>When designing survey need to achieve a delicate balance between the depth of the sources and receivers (deeper = quieter!) and the expected location of the notch (deeper = notch at lower frequency i.e. more reduced bandwidth!).</p>
+<p>When designing survey, we need to achieve a delicate balance between the depth of the sources and receivers (deeper = quieter!) and the expected location of the notch (deeper = notch at lower frequency i.e. more reduced bandwidth!).</p>
 <img src="images/notch.png" style="width:300px;height:400px" align="center"/>
 <p>Specific operators can be designed to remove the ghost and balance the amplitude of the frequencies in the ghost notch during processing, Where possible may be more convenient to filter out the notched data.</p>
 <section id="practice-1">
