deploy: 8288c23b46688bf60b7f88ad2c13ae49edd42856

--- a/genindex.html
+++ b/genindex.html
@@ -1684,10 +1684,12 @@ title="Open an issue"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="d_geosciences/Milankovitch_cycles.html#index-1">Eccentricity</a>
 </li>
-      <li><a href="c_mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+      <li><a href="a_modules/continental_tectonics/Euler_Pole.html#index-0">Euler Pole</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="c_mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+</li>
       <li><a href="c_mathematics/numerical_methods/7_FTCS.html#index-2">Explicit scheme</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/4_elementary_functions_1.html#index-0">Exponential function</a>
@@ -1794,10 +1796,10 @@ title="Open an issue"
 </li>
       <li><a href="c_mathematics/linear_algebra/1_Basic_definitions_and_operations.html#index-3">Inner product</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/numerical_methods/1_Interpolation_curve_fitting.html#index-1">Interpolation</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/numerical_methods/1_Interpolation_curve_fitting.html#index-0">Interpolation and curve fitting</a>
 </li>
       <li><a href="c_mathematics/linear_algebra/4_Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
@@ -1807,6 +1809,8 @@ title="Open an issue"
       <li><a href="c_mathematics/sets_and_functions/5_elementary_functions_2.html#index-1">Inverse hyperbolic functions (area)</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/5_elementary_functions_2.html#index-0">Inverse trigonometric functions (arcus)</a>
+</li>
+      <li><a href="a_modules/continental_tectonics/Isostasy.html#index-0">Isostasy</a>
 </li>
       <li><a href="c_mathematics/numerical_methods/15_iterative_methods_to_solve_matrix.html#index-0">Iterative methods to solve a matrix</a>
 </li>
@@ -1846,13 +1850,15 @@ title="Open an issue"
 </li>
       <li><a href="c_mathematics/statistics/Linear_Regression.html#index-0">Linear regression</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="c_mathematics/linear_algebra/1_Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="b_coding/Intro%20to%20Python/7_List_comprehensions.html#index-0">List comprehensions (python)</a>
 </li>
       <li><a href="b_coding/Intro%20to%20Python/5_Lists.html#index-0">Lists (python)</a>
+</li>
+      <li><a href="a_modules/continental_tectonics/Lithospheric_Strength.html#index-0">Lithospheric Strength</a>
 </li>
       <li><a href="c_mathematics/sets_and_functions/1_logic.html#index-0">Logic symbols</a>
 </li>
@@ -1989,6 +1995,8 @@ title="Open an issue"
       <li><a href="c_mathematics/sets_and_functions/3_functions.html#index-3">Restriction (functions)</a>
 </li>
       <li><a href="d_geosciences/Physical%20Processes/Reynolds_number.html#index-0">Reynolds number</a>
+</li>
+      <li><a href="a_modules/continental_tectonics/Ridge_Push_and_Slab_Pull.html#index-0">Ridge Push and Slab Pull</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
